[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/UI/Game/TitleMenu.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/UI/GameOverMenu/TryAgain.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/UI/GameOverMenu/Pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/UI/GameOverMenu/slice1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/UI/GameOverMenu/PokerChip.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/UI/GameOverMenu/SadBaby.png" type="Texture" id=7]
[ext_resource path="res://Assets/Audio/bensound-sadday.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://Assets/Fonts/POKERFACE.ttf"

[sub_resource type="DynamicFont" id=2]

size = 200
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GameOver" type="Node2D"]

pause_mode = 2
z_index = 5
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Visibility", "Z Index" ]

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( 529.136, 1098.08 )
scale = Vector2( 1.02673, 1.01668 )
texture = ExtResource( 2 )

[node name="MenuButton" type="TouchScreenButton" parent="." index="1"]

position = Vector2( 75.7086, 1567.5 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Restart Button" type="TouchScreenButton" parent="." index="2"]

position = Vector2( 74.3175, 1817.04 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="RestartTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="GameOverText" type="Sprite" parent="." index="4"]

position = Vector2( 539.659, 342.811 )
scale = Vector2( 0.980928, 0.910406 )
texture = ExtResource( 5 )

[node name="Score" type="Sprite" parent="." index="5"]

position = Vector2( 534.132, 1079.33 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="Score" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1481.0
margin_top = -320.0
margin_right = -607.0
margin_bottom = -41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "20"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="trophy-clipart-trophy-cutout-md" type="Sprite" parent="." index="6"]

position = Vector2( 533.293, 1077.69 )
scale = Vector2( 0.994019, 1.00742 )
texture = ExtResource( 7 )

[node name="Music" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]

[connection signal="pressed" from="Restart Button" to="." method="_on_Restart_Button_pressed"]

[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]


